--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "next": "latest",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^3.1.2",
     "sass": "^1.82.0"
   },
   "devDependencies": {
