--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^3.1.2",
-    "sass": "^1.82.0"
+    "sass": "^1.82.0",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
